linux/automation-suite/2024.10/overview.mdx
---
title: Automation Suite Overview
description: This page outlines the capabilities and product offerings you can enjoy if you install Automation Suite, and helps you get an idea about the architecture you are about to build.
---

## Overview
Automation Suite enables you to deploy the full UiPath® automation platform in a Linux environment ranging from bare metal machines to on-premises Virtual Machine infrastructure, or cloud subscriptions to any of the major providers.

Managing multiple server product deployments independently usually requires configuring integrations with enterprise systems for authenticating and managing users, as well as managing and monitoring each deployment from an availability and scale perspective.

Automation Suite contains everything in one package that you can deploy in multi-node HA-ready production mode with automatic scaling and built-in HA, and monitor, configure, and upgrade as a whole. All the functionality available in Automation Cloud is adapted to make it easier for you to manage everything yourself with low total cost of ownership.

What Automation Suite includes:

- **All Server Products** (except for any new products shipping in Automation Cloud first).
- **All Shared Suite Capabilities** that enable you to easily configure the integration with existing enterprise systems, such as AD, AAD, or SAML, across all products. A common experience is offered across the suite for the user, tenant, external applications, and license management.
- **Common end user portal**.
- **Kubernetes-based infrastructure, cluster management, and monitoring tools**, all preconfigured, dedicated to and optimized for UiPath®. This enables running all the products at scale and with HA. This means you do not have to design, configure, and validate which Kubernetes versions and components for routing, storage, etc., work well with the UiPath® services.

Everything needed is included and optimized, **all supported by UiPath®.**

You just need to bring the machines, load balancer, and SQL. For the specific requirements for the machines as well as installation options and instructions, see and the remaining of this section.

For a leaner stack, reduced complexity, and more streamlined operations, Automation Suite is available for containerized platforms as well:

- If you are interested in deploying Automation Suite in an AKS or EKS environment, refer to [Automation Suite on EKS/AKS Installation Guide](https://docs.uipath.com/automation-suite/automation-suite/2024.10/installation-guide-eks-aks/automation-suite-overview).
- If you are interested in deploying Automation Suite in an OpenShift environment, refer to [Automation Suite on OpenShift Installation Guide.](https://docs.uipath.com/automation-suite/automation-suite/2024.10/installation-guide-openshift/automation-suite-overview)

For an in-depth perspective on each deployment model, see [Cross-deployment model feature comparison](https://docs.uipath.com/automation-suite/automation-suite/2024.10/installation-guide/cross-deployment-model-feature-comparison).